--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -6,5 +6,8 @@
     </head>
     <body>
         <h1>Pancakes (iHOP style)</h1>
+        <img src="img/pancakes.jpeg" 
+        width= "1000"
+        height="1000"alt="Delcious Pancakes">
     </body>
 </html>
