Completed Recipe Page #2

--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -9,5 +9,27 @@
         <img src="img/pancakes.jpeg" 
         width= "1000"
         height="1000"alt="Delcious Pancakes">
+        <h1>Description</h1>
+        <p1>iHOP style pancakes straight from you own kitchen!</p1>
+
+        <h1>Ingredients</h1>
+        <ul>
+            <li>1 1/4 cups sifted all-purpose flour</li>
+            <li>1 teaspoon baking powder</li>
+            <li>1 teaspoon baking soda</li>
+            <li>1/8 teaspoon salt</li>
+            <li>1 large egg beaten</li>
+            <li>1 1/4 cups buttermilk</li>
+            <li>2 Tablespoons butter melted</li>
+            <li>3 Tablespoons Sugar</li>
+        </ul>
+
+        <h1>Steps</h1>
+        <ol>
+            <li>In a large bowl, sift together flour, baking powder, baking soda and salt.</li>
+            <li>In a small bowl, combine egg and buttermilk. Whisk together until blended. Add to flour mixture, stirring only until smooth. Add melted butter and sugar to batter and whisk until combined.</li>
+            <li>Heat a griddle or nonstick skillet over medium-low heat. Grease griddle with cooking spray or butter. Drop 1/4 cup batter on pan and spread into a 5-inch circle. Cook until bubbles begin to form on surface and edges begin to brown. Gently flip and continue to brown other side. Repeat with remaining batter.</li>
+            <li>Serve with butter and warm syrup...then enjoy!</li>
+        </ol>
     </body>
 </html>
