--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/beefcurrystew.html"> Japanese Beef Curry Stew </a>
+        <ul>
+        <li><a href="./recipes/beefcurrystew.html"> Japanese Beef Curry Stew </a></li>
+        <li><a href="./recipes/pancakes.html"> iHOP Style Pancakes</a></li>
+        </ul>
     </body>
-    
+
 </html>
