Added shrimp gumbo recipe page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <ul>
         <li><a href="./recipes/beefcurrystew.html"> Japanese Beef Curry Stew </a></li>
         <li><a href="./recipes/pancakes.html"> iHOP Style Pancakes</a></li>
+        <li><a href="./recipes/shrimpgumbo.html"> Southern Shrimp Gumbo</a></li>
         </ul>
     </body>
 
