--- a/recipes/beefcurrystew.html
+++ b/recipes/beefcurrystew.html
@@ -18,6 +18,7 @@ alt="Finished Japanese Curry Bowl">
         <li>1 3/4 Medium Onions (Minced) - 350g/13oz</li>
         <li>1/2 Medium Carrot (Chopped) - 100g/3.5oz</li>
         <li>1 Medium Potato (Chopped) - 150g/5oz</li>
+        <li>1 Box S&B Curry Sauce Mix</li>
         <li>Vegetable Oil 1 Tbsp</li>
         <li>Water - 540ml</li>
     </ul>
