--- a/recipes/beefcurrystew.html
+++ b/recipes/beefcurrystew.html
@@ -3,32 +3,33 @@
 <head>
     <metaset char ="utf-8">
     <Title></Title>
+    <link rel="stylesheet" href="beefstyle.css">
     </head>
 <body>        
-<h1>Japanese Beef Curry Stew</h1>
+<h1 class="title">Japanese Beef Curry Stew</h1>
 <img src="img/jpbeefcurrystew.jpg"
 width="800"
 height="355" 
 alt="Finished Japanese Curry Bowl">
-<h1>Description</h1>
-<p1>Homemade DIY Japanese beef curry stew. A filling dish that's great for lunch or dinner!</p1>
-<h1>Ingredients</h1>
-    <ul>
-        <li>Beef (Chopped) - 450g/1lb</li>
-        <li>1 3/4 Medium Onions (Minced) - 350g/13oz</li>
-        <li>1/2 Medium Carrot (Chopped) - 100g/3.5oz</li>
-        <li>1 Medium Potato (Chopped) - 150g/5oz</li>
-        <li>1 Box S&B Curry Sauce Mix</li>
-        <li>Vegetable Oil 1 Tbsp</li>
-        <li>Water - 540ml</li>
+<h1 class="description">Description</h1>
+<p1 class="des1">Homemade DIY Japanese beef curry stew. A filling dish that's great for lunch or dinner!</p1>
+<h1 class="unorganized">Ingredients</h1>
+    <ul class="list">
+        <li class="ingredients">Beef (Chopped) - 450g/1lb</li>
+        <li class="ingredients">1 3/4 Medium Onions (Minced) - 350g/13oz/</li class="ingredients">
+        <li class="ingredients">1/2 Medium Carrot (Chopped) - 100g/3.5oz</li class="ingredients">
+        <li class="ingredients">1 Medium Potato (Chopped) - 150g/5oz</li class="ingredients">
+        <li class="ingredients">1 Box S&B Curry Sauce Mix</li class="ingredients">
+        <li class="ingredients">Vegetable Oil 1 Tbsp</li class="ingredients">
+        <li class="ingredients">Water - 540ml</li class="ingredients">
     </ul>
-<h1>Steps</h1>
-<ol>
-    <li>Stir-fry meat and vegetables with oil in a large skillet on medium heat for approx. 5 min.</li>
-    <li>Add water and bring to boil. Reduce heat, cover and simmer until ingredients are tender, approx. 15min.</li>
-    <li>Turn the heat off, break S&B Golden Curry Sauce Mix into pieces and add them to the skillet. Stir until sauce mixes are completely melted. Simmer approx. 5 min., stirring constantly.</li>
-    <li>Serve hot over rice or noodles.</li>
-</ol>    
+<h1 class="organized">Steps</h1>
+<ol class= "list">
+    <li class="ingredients">Stir-fry meat and vegetables with oil in a large skillet on medium heat for approx. 5 min.</li class="ingredients">
+    <li class="ingredients">Add water and bring to boil. Reduce heat, cover and simmer until ingredients are tender, approx. 15min.</li class="ingredients">
+    <li class="ingredients">Turn the heat off, break S&B Golden Curry Sauce Mix into pieces and add them to the skillet. Stir until sauce mixes are completely melted. Simmer approx. 5 min., stirring constantly.</li class="ingredients">
+    <li class="ingredients">Serve hot over rice or noodles.</li class="ingredients">
+</ol class= "list">    
 
 </body>
 </html>
